--- a/css/home.css
+++ b/css/home.css
@@ -1,139 +1,144 @@
 body, html {
-    margin: 0;
-    height: 100%;
-    width: 100%;
+  margin: 0;
+  height: 100%;
+  width: 100%;
 }
 
 /* Navbar container */
+
 .navbar {
-    overflow: hidden;
-    background-color: darkseagreen;
-    font-family: Arial;
-  }
-  
-  /* Links inside the navbar */
-  .navbar a {
-    float: left;
-    font-size: 25px;
-    color: black;
-    font-weight: bold;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration:none;
-  }
-  
-  /* The dropdown container */
-  .dropdown {
-    float:left;
-    overflow: hidden;
-  }
-  
-  /* Dropdown button */
-  .dropdown .dropbtn {
-    font-size: 25px;
-    border: none;
-    outline: none;
-    color: black;
-    font-weight: bold;
-    padding: 14px 16px;
-    background-color: inherit;
-    font-family: inherit; /* Important for vertical align on mobile phones */
-    margin: 0; /* Important for vertical align on mobile phones */
-  }
-  
-  /* Add a red background color to navbar links on hover */
-  .navbar a:hover, .dropdown:hover .dropbtn {
-    background-color:cornflowerblue;
-  }
-  
-  /* Dropdown content (hidden by default) */
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  /* Links inside the dropdown */
-  .dropdown-content a {
-    float: none;
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-  }
-  
-  /* Add a grey background color to dropdown links on hover */
-  .dropdown-content a:hover {
-    background-color: #ddd;
-  }
-  
-  /* Show the dropdown menu on hover */
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
+  overflow: hidden;
+  background-color: darkseagreen;
+  font-family: Arial;
+}
+
+/* Links inside the navbar */
+
+.navbar a {
+  float: left;
+  font-size: 25px;
+  color: black;
+  font-weight: bold;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* The dropdown container */
+
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+/* Dropdown button */
+
+.dropdown .dropbtn {
+  font-size: 25px;
+  border: none;
+  outline: none;
+  color: black;
+  font-weight: bold;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  /* Important for vertical align on mobile phones */
+  margin: 0;
+  /* Important for vertical align on mobile phones */
+}
+
+/* Add a background color to navbar links on hover */
+
+.navbar a:hover, .dropdown:hover .dropbtn {
+  background-color: cornflowerblue;
+}
+
+/* Dropdown content (hidden by default) */
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+/* Add a background color to dropdown links on hover */
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+/* Show the dropdown menu on hover */
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
 
 body {
-    display: grid;
-    grid-template-rows: 80px 1fr;
-    grid-template-columns: 30% 70%;
-    grid-template-areas: "header header" "sidebar content";
+  display: grid;
+  grid-template-rows: 80px 1fr;
+  grid-template-columns: 30% 70%;
+  grid-template-areas: "header header" "sidebar content";
 }
 
 .header {
-    grid-area: header;
-    text-align: center;
-    padding: 10px;
-    background-color: darkseagreen;
+  grid-area: header;
+  text-align: center;
+  padding: 10px;
+  background-color: darkseagreen;
 }
 
 .sidebar {
-    color: black;
-    grid-area: sidebar;
-    padding: 10px;
-    background-color:lightblue;
-    overflow: auto;
-    font-family: sans-serif;
-    text-align : center;
+  color: black;
+  grid-area: sidebar;
+  padding: 10px;
+  background-color: lightblue;
+  overflow: auto;
+  font-family: sans-serif;
+  text-align: center;
 }
 
 .content {
-    grid-area: content;
-}
-
-.footer {
-    grid-area: footer;
-    padding: 2px;
-    background-color: rgb(175, 175, 175);
+  grid-area: content;
 }
 
 a {
-    font-size: 25px;
-color:cornflowerblue;
-padding: 0px 10px;
+  font-size: 25px;
+  color: cornflowerblue;
+  padding: 0px 10px;
   word-wrap: normal;
   display: inline-block;
 }
 
 .button {
-    border: 2px solid black;
-    color: white;
-    background-color: darkslategray;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 20px;
-    font-weight: bold;
-    margin: 4px 2px;
-    cursor: pointer;
-    border-radius: 7px;
+  border: 2px solid black;
+  color: white;
+  background-color: darkslategray;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 20px;
+  font-weight: bold;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 7px;  /* rounded edges*/
 }
 
 .button:hover {
-    background-color: #4CAF50;
-    color: white;
+  background-color: #4CAF50;
+  color: white;
 }
