--- a/css/start.css
+++ b/css/start.css
@@ -8,7 +8,7 @@ body, html {
 #quiz {
     margin: auto;
     padding-bottom: 10%;
-    background-color: lightblue;
+    background-color: rgba(0, 0, 0, 0.959);
     width: 40%;
     border: 4px solid black;
     border-radius: 20px;
@@ -20,7 +20,9 @@ body, html {
 
 .button {
     border: 2px solid black;
-    color: black;
+    border-radius: 15px;
+    background-color: darkslategrey;
+    color: cadetblue;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
@@ -31,8 +33,8 @@ body, html {
 }
 
 .button:hover {
-    background-color: #4CAF50;
-    color: white;
+    background-color: cadetblue;
+    color: darkslategrey;
 }
 
 .content {
@@ -51,4 +53,58 @@ a {
 
 #nav:hover {
     color: cornflowerblue;
+}
+
+/* The Modal (background) */
+
+.modal {
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Stay in place */
+    z-index: 1;
+    /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%;
+    /* Full width */
+    height: 100%;
+    /* Full height */
+    overflow: auto;
+    /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4);
+    /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+
+.modal-content {
+    background-color: darkslategrey;
+    color: cadetblue;
+    font-size: 20px;
+    font-weight: bold;
+    font-family: sans-serif;
+    margin: 15% auto;
+    /* 15% from the top and centered */
+    padding: 20px;
+    border: 2px solid black;
+    width: 80%;
+    /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+
+.close {
+    color: cadetblue;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover, .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
