--- a/css/vessel.css
+++ b/css/vessel.css
@@ -7,7 +7,7 @@ body, html {
 
 body {
     display: grid;
-    grid-template-rows: 80px 100px 1fr 250px ;
+    grid-template-rows: 80px 100px 500px 250px ;
     grid-template-areas: "header" "title" "content" "text";
     background-color: aliceblue;
 }
@@ -22,8 +22,8 @@ body {
 #map {
     margin: auto;
     height: 100%;
-    background-color: aliceblue;
-    border: 3px solid black;
+    /* background-color: aliceblue;
+    border: 3px solid black; */
 }
 
 .content {
