--- a/css/team.css
+++ b/css/team.css
@@ -6,104 +6,107 @@ body, html {
   
   /* Navbar container */
   
-  .navbar {
-    overflow: hidden;
-    background-color: darkseagreen;
-    font-family: Arial;
-  }
-  
-  /* Links inside the navbar */
-  
-  .navbar a {
-    float: left;
-    font-size: 25px;
-    color: black;
-    font-weight: bold;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-  
-  /* The dropdown container */
-  
-  .dropdown {
-    float: left;
-    overflow: hidden;
-  }
-  
-  /* Dropdown button */
-  
-  .dropdown .dropbtn {
-    font-size: 25px;
-    border: none;
-    outline: none;
-    color: black;
-    font-weight: bold;
-    padding: 14px 16px;
-    background-color: inherit;
-    font-family: inherit;
-    /* Important for vertical align on mobile phones */
-    margin: 0;
-    /* Important for vertical align on mobile phones */
-  }
-  
-  /* Add a background color to navbar links on hover */
-  
-  .navbar a:hover, .dropdown:hover .dropbtn {
-    background-color: cornflowerblue;
-  }
-  
-  /* Dropdown content (hidden by default) */
-  
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-  }
-  
-  /* Links inside the dropdown */
-  
-  .dropdown-content a {
-    float: none;
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-  }
-  
-  /* Add a background color to dropdown links on hover */
-  
-  .dropdown-content a:hover {
-    background-color: #ddd;
-  }
-  
-  /* Show the dropdown menu on hover */
-  
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
+.navbar {
+  overflow: hidden;
+  background-color: darkslategray;
+  font-family: Arial;
+}
+
+/* Links inside the navbar */
+
+.navbar a {
+  float: left;
+  font-size: 25px;
+  color: black;
+  font-weight: bold;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* The dropdown container */
+
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+/* Dropdown button */
+
+.dropdown .dropbtn {
+  font-size: 25px;
+  border: none;
+  outline: none;
+  color: black;
+  font-weight: bold;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  /* Important for vertical align on mobile phones */
+  margin: 0;
+  /* Important for vertical align on mobile phones */
+}
+
+/* Add a background color to navbar links on hover */
+
+.navbar a:hover, .dropdown:hover .dropbtn {
+  background-color: cadetblue;
+}
+
+/* Dropdown content (hidden by default) */
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: darkslategray;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+/* Add a background color to dropdown links on hover */
+
+.dropdown-content a:hover {
+  background-color: cadetblue;
+}
+
+/* Show the dropdown menu on hover */
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
   
   body {
     display: grid;
     grid-template-rows: 80px 1fr;
     grid-template-areas: "header" "content";
+    background-color: rgb(17, 22, 22);
   }
   
   .header {
     grid-area: header;
     text-align: center;
     padding: 10px;
-    background-color: darkseagreen;
+    background-color: darkslategray;
   }
   
   
   .content {
     grid-area: content;
-    background-color: aliceblue;
+    background-color: rgb(17, 22, 22);
+    color: cadetblue;
   }
   
   a {
@@ -112,26 +115,6 @@ body, html {
     padding: 0px 10px;
     word-wrap: normal;
     display: inline-block;
-  }
-  
-  .button {
-    border: 2px solid black;
-    color: white;
-    background-color: darkslategray;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 20px;
-    font-weight: bold;
-    margin: 4px 2px;
-    cursor: pointer;
-    border-radius: 7px;  /* rounded edges*/
-  }
-  
-  .button:hover {
-    background-color: #4CAF50;
-    color: white;
   }
 
   .clearfix{
