--- a/css/vessel.css
+++ b/css/vessel.css
@@ -7,7 +7,7 @@ body, html {
 
 body {
     display: grid;
-    grid-template-rows: 80px 250px 500px 250px ;
+    grid-template-rows: 80px 350px 500px 250px ;
     grid-template-areas: "header" "title" "content" "text";
     background-color: rgb(17, 22, 22);
 }
@@ -20,7 +20,7 @@ body {
 }
 
 #map {
-    height: 500px;
+    height: 100%;
     margin: auto;
 }
 
