--- a/css/vessel.css
+++ b/css/vessel.css
@@ -27,6 +27,7 @@ body {
 .content {
     grid-area: content;
     background-color: rgb(17, 22, 22);
+    margin-top: 50px;
 }
 
 /* Navbar container */
