--- a/css/home.css
+++ b/css/home.css
@@ -125,6 +125,7 @@ body {
   text-align: center;
   background-color: rgba(0, 0, 0, 0.564);
   background-blend-mode: multiply;
+  background-repeat:repeat-x;
 }
 
 .content {
