--- a/css/home.css
+++ b/css/home.css
@@ -119,13 +119,13 @@ body {
   padding: 10px;
   filter: brightness(100%);
   background-image: url(https://www.pewtrusts.org/-/media/post-launch-images/2020/10/gettyimages1223473846jpgmaster/16x9_m.jpg?mw=2580&hash=7651902412A7BB1E94A8D83923DCAEB6);
-  background-color:rgb(17, 22, 22);
   overflow: auto;
+  background-size: cover;
   font-family: 'Source Sans Pro', sans-serif;
   text-align: center;
   background-color: rgba(0, 0, 0, 0.564);
   background-blend-mode: multiply;
-  background-repeat:repeat-x;
+  background-repeat:no-repeat;
 }
 
 .content {
