--- a/css/team.css
+++ b/css/team.css
@@ -1,23 +1,29 @@
 body, html {
-    margin: 0;
+    margin: 0px;
     height: 100%;
     width: 100%;
   }
   
-  /* Navbar container */
+/* Navbar container */
   
 .navbar {
   overflow: hidden;
-  background-color: darkslategray;
+  background-color: rgb(10, 15, 15);
   font-family: Arial;
 }
 
+.header {
+  grid-area: header;
+  text-align: center;
+  padding: 10px;
+  background-color: rgb(10, 15, 15);
+}
 /* Links inside the navbar */
 
 .navbar a {
   float: left;
   font-size: 25px;
-  color: black;
+  color: rgb(255, 255, 255);
   font-weight: bold;
   text-align: center;
   padding: 14px 16px;
@@ -37,7 +43,7 @@ body, html {
   font-size: 25px;
   border: none;
   outline: none;
-  color: black;
+  color: rgb(255, 255, 255);
   font-weight: bold;
   padding: 14px 16px;
   background-color: inherit;
@@ -92,21 +98,19 @@ body, html {
     display: grid;
     grid-template-rows: 80px 1fr;
     grid-template-areas: "header" "content";
-    background-color: rgb(17, 22, 22);
+    background-color: rgb(255, 255, 255);
+    
   }
   
-  .header {
-    grid-area: header;
-    text-align: center;
-    padding: 10px;
-    background-color: darkslategray;
-  }
-  
-  
+
   .content {
     grid-area: content;
-    background-color: rgb(17, 22, 22);
-    color: cadetblue;
+    background-color: rgb(255, 255, 255);
+    color: rgb(53, 53, 53);
+    margin-left: 25%;
+    margin-right: 25%;
+    margin-top: 5%;
+
   }
   
   a {
@@ -129,5 +133,5 @@ body, html {
   }
 
   #overview{
-    margin-bottom: 20px;
+    margin-bottom:10px;
   }
