--- a/css/map.css
+++ b/css/map.css
@@ -38,6 +38,14 @@ body {
     font-weight: 700;
 }
 
+.dashboard {
+    grid-area: dashboard;
+    padding: 10px;
+    background-color: #555;
+    overflow: auto;
+    font-weight: 700;
+}
+
 #map {
     position: relative;
     height: 100%;
@@ -47,6 +55,34 @@ body {
 .content {
     grid-area: content;
     background-color: rgb(17, 22, 22);
+}
+
+/* legend styles */
+.info {
+	padding: 6px 8px;
+	font: 14px/16px Arial, Helvetica, sans-serif;
+	background: white;
+	background: rgba(255,255,255,0.8);
+	box-shadow: 0 0 15px rgba(0,0,0,0.2);
+	border-radius: 5px;
+	min-width: 250px;
+	min-height: 50px;
+}
+.info h4 {
+	margin: 0 0 5px;
+	color: #777;
+}
+
+.legend {
+	line-height: 18px;
+	color: #555;
+}
+.legend i {
+	width: 18px;
+	height: 18px;
+	float: left;
+	margin-right: 8px;
+	opacity: 0.7;
 }
 
 /* Navbar container */
