--- a/css/map.css
+++ b/css/map.css
@@ -28,6 +28,7 @@ body {
 .text {
     grid-area: text;
     text-align: center;
+    margin-top: 1px;
 }
 
 .sidebar {
@@ -36,6 +37,7 @@ body {
     background-color: #555;
     overflow: auto;
     font-weight: 700;
+    word-wrap: break-word;
 }
 
 .dashboard {
@@ -62,7 +64,7 @@ body {
 	padding: 6px 8px;
 	font: 14px/16px Arial, Helvetica, sans-serif;
 	background: white;
-	background: rgba(255,255,255,0.8);
+	background: rgba(255,255,255,0.5);
 	box-shadow: 0 0 15px rgba(0,0,0,0.2);
 	border-radius: 5px;
 	min-width: 250px;
