--- a/css/map.css
+++ b/css/map.css
@@ -4,6 +4,21 @@ body, html {
     width: 100%;
 }
 
+/* Navbar container */
+  
+.navbar {
+    overflow: hidden;
+    background-color: rgb(10, 15, 15);
+    font-family: Arial;
+  }
+  
+  .header {
+    grid-area: header;
+    text-align: center;
+    padding: 10px;
+    background-color: rgb(10, 15, 15);
+  }
+  
 body {
     display: grid;
     grid-template-rows: 80px 70px 1fr 100px;
@@ -12,12 +27,6 @@ body {
     background-color: rgb(17, 22, 22);
 }
 
-.header {
-    grid-area: header;
-    text-align: center;
-    padding: 10px;
-    background-color: darkslategray;
-}
 
 .title {
     grid-area: title;
@@ -87,18 +96,13 @@ body {
 
 /* Navbar container */
 
-.navbar {
-    overflow: hidden;
-    background-color: darkslategray;
-    font-family: Arial;
-}
 
 /* Links inside the navbar */
 
 .navbar a {
     float: left;
     font-size: 25px;
-    color: black;
+    color: rgb(255, 255, 255);
     font-weight: bold;
     text-align: center;
     padding: 14px 16px;
@@ -118,7 +122,7 @@ body {
     font-size: 25px;
     border: none;
     outline: none;
-    color: black;
+    color: rgb(255, 255, 255);
     font-weight: bold;
     padding: 14px 16px;
     background-color: inherit;
